# agv-vision-system

./: .gitignore  LICENSE  README.md  temp.md
.agent/: 00_lession.md
.agent/myknowledge/: Unit_Test.md  winsock2.md
.agent/myselfdo/: Modbus.md
.agent/workflow/: 01_database_setup.md  02_camera&vision.md  03_vision-ai.md
agv-control/: AgvControl.sln  README.md
agv-control/AgvControl/: AgvControl.csproj  AgvControl.http  AssemblyInfo.cs  Program.cs  appsettings.json
agv-control/AgvControl.Tests/: AgvControl.Tests.csproj  AgvOrchestratorMathTests.cs  AgvOrchestratorTests.cs  AgvOrchestratorTickTests.cs  DbLoggerIntegrationTests.cs  GridMapTests.cs  ModbusClientTests.cs  ModbusIntegrationTests.cs  PathPlannerTests.cs
agv-control/AgvControl.Tests/docs/: VisionClientTest.md
agv-control/AgvControl/Data/: DbLogger.cs
agv-control/AgvControl/Models/: AgvState.cs  DetectionResult.cs  GridMap.cs  ModbusRegisters.cs
camera/: README.md  camera_server.py  db_logger.py  requirements.txt
common/: README.md  __db_logger.py  db_logger.py
database/: README.md  init.sql
docs/: 01_PROJECT_NOTES.md  02_ARCHITECTURE.md  03_PYTHON_VIRTUAL_ENV.md  04_MODBUS_REGISTER_MAP.md  05_AGV_CONTROL_IMPLEMENTATION.md  06_MODBUS_implementation_plan.md  07_AGV_ORCHESTRATOR_IMPLEMENTATION.md  ARCHITECTURE.md  PROJECT_NOTES.md
hardware-sim/: CMakeLists.txt  CMakePresets.json  README.md  hardware-sim.cpp  hardware-sim.h  vcpkg.json
hardware-sim/src/: main.cpp  main_old.cpp
vision-ai/: HOW_RUN_APP.md  README.md  app.py  requirements.txt
vision-ai/training/: README.md
(+18 files in other folders)
